[gd_scene load_steps=25 format=2]

[ext_resource path="res://Untitled - 5.png" type="Texture" id=1]
[ext_resource path="res://Untitled - 4.png" type="Texture" id=2]
[ext_resource path="res://Rat Enemy.gd" type="Script" id=3]
[ext_resource path="res://Floating_Text.tscn" type="PackedScene" id=4]
[ext_resource path="res://Untitled - 46.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2560, 512, 512 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Rat_Idle",
"speed": 6.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Rat_Run",
"speed": 12.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "death",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 176, 96 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 176, 48 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 48, 120 )

[node name="Rat" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
frames = SubResource( 16 )
animation = "death"

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( -8, 128 )
shape = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 160 )
shape = SubResource( 18 )

[node name="Floating_Text" parent="." instance=ExtResource( 4 )]
position = Vector2( -96, -24 )
scale = Vector2( 0.1, 0.1 )

[node name="HitBox" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -160, 96 )
shape = SubResource( 19 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
